2005-10-25	Richard van den Berg  <richard@vdberg.org>
	* Print start and stop timestamp together (Marc Haber <mh+aide@zugschlus.de>)
	* Print database_out path with -i and -u

2005-10-19	Richard van den Berg  <richard@vdberg.org>
	* Applied patch from Debian bug #121717: aide spelling fixes

2005-10-16	Richard van den Berg  <richard@vdberg.org>
	* Applied patch 1124758: fix underquoted m4
	* Applied patch 1124757: dist-hook missing file snprintf.h
	* Applied patch 1124760: cleaner automake initialisation
	* Applied patch 1124782: gettextize related patch

2005-10-07	Richard van den Berg  <richard@vdberg.org>
	* If open() with NO_ATIME fails, try open() again without it

2005-10-05	Richard van den Berg  <richard@vdberg.org>
	* Compile aide as a static executable
	* Fixed some spelling errors caught by Marc Haber <mh+aide@zugschlus.de>
	* Changed version to Post 0.11-rc1
	* Ignore special characters after backslash in directory names (bug #1162575)

2005-10-04	Richard van den Berg  <richard@vdberg.org>
	* Released aide 0.11-rc1

2005-09-14	Richard van den Berg  <richard@vdberg.org>
	* Print detailed error message when mmap() returns MAP_FAILED

2005-09-02	Richard van den Berg  <richard@vdberg.org>
	* Added patch for cygwin compatibility as per bug #1279818

2005-08-10	Richard van den Berg  <richard@vdberg.org>
	* Open files with O_NOATIME on Linux (per Vlada Macek <tuttle@bbs.cvut.cz>)

2005-08-08	Richard van den Berg  <richard@vdberg.org>
	* Reset fs.st_rdev in 2 additional places as per bug #1253822

2005-06-30	Richard van den Berg  <richard@vdberg.org>
	* Removed return in conf_lex.l that caused --after to be ignored

2005-06-12	Richard van den Berg  <richard@vdberg.org>
	* Applied another aide.1.in from Sven Hoexter <sven@timegate.de>

2005-06-11	Richard van den Berg  <richard@vdberg.org>
	* Applied aide.1.in patch from SF bug #1217483

2005-04-28	Richard van den Berg  <richard@vdberg.org>
	* Added long long support for portable snprintf